--- a/root/index.html
+++ b/root/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./common/css/apa.css">
+  <link rel="stylesheet" href="./_common/css/apa.css">
   <title>APA TEMPLATE</title>
 </head>
+
+
+
+
+
+
+
 
 
 <body class="st-fullScreen">
@@ -30,14 +37,14 @@
     </aside>
 </header>
 
-<main class="fullScreen-inner">
+<main id="topPageHero" class="fullScreen-inner">
 <h1 class="top-siteName">APA TEMPLATE</h1>
 <div class="top-nav">
   <ul>
-    <li class="button"><a href="./page/category/sample/index.html">メニュー1</a></li>
-    <li class="button"><a href="./page/category/sample/index.html">メニュー2</a></li>
-    <li class="button"><a href="./page/category/sample/index.html">メニュー3</a></li>
-    <li class="button"><a href="./page/category/sample/index.html">メニュー4</a></li>
+    <li class="button"><a href="./page/category/sample/index.html">カテゴリ</a></li>
+    <li class="button"><a href="./page/category/sample/index.html">カテゴリ</a></li>
+    <li class="button"><a href="./page/category/sample/index.html">カテゴリ</a></li>
+    <li class="button"><a href="./page/category/sample/index.html">カテゴリ</a></li>
   </ul>
 	<ul>
 		<li><a href="">テスト</a></li>
@@ -118,21 +125,21 @@
 	-webkit-transition:all .4s;transition:all .4s;
 }
 </style>
-<script src="./common/js/jquery-3.3.1.min.js"></script>
+<script src="./_common/js/jquery-3.3.1.min.js"></script>
 <script>
 //背景画像
 $(function () {
+	if($('#topPageHero').length){
 	var num = Math.floor(Math.random()*(3-1)+1);
   num = ('00'+num).slice(-3);
   console.log(num);
-  $('.st-fullScreen').css('background-image', 'url(./common/img/top'+num+'.jpg)');
+	$('.st-fullScreen').css('background-image', 'url(./_topImage/top'+num+'.jpg)');
+	}
 });
 
 //メニュー
 $(function(){
 	$(".side__nav").hide();
-	
-
 	$("#hamburger").on("click touched", function(){
 		if($(this).prop("checked")){
 			$(".hamburger__cl").addClass("active");
