--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -8,7 +8,33 @@
   <link rel="stylesheet" href="../../_common/css/parts.css" media="all">
   <link rel="stylesheet" href="../../_common/css/lba-slider.css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" media="all">
-  <title>サンプルページ</title>
+  <link rel="stylesheet" href="../../_common/css/androidstudio.css">
+  <script src="../../_common/js/highlight.pack.js"></script>
+  <script>
+  hljs.initHighlightingOnLoad();
+  hljs.configure({tabReplace: '  '});
+  </script>
+  <style>
+  pre > code {
+    max-height: 200px;
+  }
+  .copy-btn{
+    background-color:gold;
+    border-radius: 20px;
+    padding: 10px;
+    display: block;
+    margin: 20px auto;
+    width: 50%;
+    text-align: center;
+    color: #333;
+    font-weight: 700;
+    cursor:pointer;
+  }
+
+  </style>
+  
+
+<title>テンプレート</title>
 </head>
 <body class="st-grid -archives">
   <div id="header"><!--ヘッダーマウント用--></div>
@@ -16,23 +42,45 @@
     <article class="content">
       <section>
       <!--▼▼▼▼▼▼▼▼▼▼▼▼ここから編集領域▼▼▼▼▼▼▼▼▼▼▼▼-->
-        <h1 class="page__title">
-        <span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
-        タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル
-        <span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
-        </h1>
+
+<h1 class="page__title">
+<span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
+タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル
+<span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
+</h1>
+<pre><code class="html">
+&lt;h1 class="page__title"&gt;
+&lt;span&gt;サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ&lt;/span&gt;
+タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル
+&lt;span&gt;サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ&lt;/span&gt;
+&lt;/h1&gt;
+</code></pre>
+<span class="copy-btn" data-target=".page__title">サンプルコードをコピーする</span>
 
 
-        <h2 class="headline -wLine">
-          見出し
-        </h2>
+<h2 class="headline -wLine">
+タイトル（基本）
+</h2>
+<pre><code class="html">
+&lt;h2 class="headline -wLine"&gt;
+見出し
+&lt;/h2&gt;
+</code></pre>
+<span class="copy-btn" data-target=".headline.-wLine">サンプルコードをコピーする</span>
 
-        <h2 class="headline -wLine">
-          タイトル（基本）
-        </h2>
-        <h2 class="headline -wLine_dot">
-            タイトル（ドット線）
-        </h2>
+
+<h2 class="headline -wLine_dot">
+タイトル（ドット線）
+</h2>
+<pre><code class="html">
+&lt;h2 class="headline -wLine_dot"&gt;
+タイトル（ドット線）
+&lt;/h2&gt;
+</code></pre>
+<span class="copy-btn" data-target=".headline.-wLine_dot">サンプルコードをコピーする</span>
+
+
+
         <h2 class="headline -leftborder">
             タイトル（横ボーダー）<br>2行目２行目２行目
         </h2>
@@ -173,18 +221,24 @@
 <script src="../../_common/js/jquery-3.3.1.min.js"></script>
 <script src="../../_common/js/ligbox.js"></script>
 <script src="../../_common/js/common.js"></script>
-
 <script>
-// 画像のロールオーバー
-$(function(){
-	$('.rolloverImage img').hover(function(){
-		$(this).attr('src',$(this).attr('src').replace('_bf','_af'));
-	},function(){
-		$(this).attr('src',$(this).attr('src').replace('_af','_bf'));
-	});
+/*コードコピー用 */
+jQuery(function($){
+  $('.copy-btn').on('click', function() {
+      var target = $(this).data('target');
+      var text = $(target).prop('outerHTML');
+      $(this).copy(text);
+      alert('コピーしました。');
+  });
+  $.fn.extend({
+      copy: function(text) {
+          $(this).after('<textarea>'+text+'</textarea>');
+          $(this).next('textarea').select();
+          document.execCommand('copy');
+          $(this).next('textarea').remove();
+      },
+  });
 });
-  
-
 </script>
 	
 </body>
