Update　ダウンロードボタン

--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" media="all">
   <link rel="stylesheet" href="../../_common/css/androidstudio.css">
   <script src="../../_common/js/highlight.pack.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script>
   hljs.initHighlightingOnLoad();
   hljs.configure({tabReplace: '  '});
@@ -30,7 +31,10 @@
     font-weight: 700;
     cursor:pointer;
   }
-
+  .material-icons{
+    display: inline-flex;
+    vertical-align: bottom;
+  }
   </style>
   
 
@@ -48,36 +52,33 @@
 タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル
 <span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
 </h1>
-<pre><code class="html">
-&lt;h1 class="page__title"&gt;
+<pre><code class="html">&lt;h1 class="page__title"&gt;
 &lt;span&gt;サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ&lt;/span&gt;
 タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル
 &lt;span&gt;サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ&lt;/span&gt;
 &lt;/h1&gt;
 </code></pre>
-<span class="copy-btn" data-target=".page__title">サンプルコードをコピーする</span>
+<button class="copy-btn" data-target=".page__title">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
 
 <h2 class="headline -wLine">
 タイトル（基本）
 </h2>
-<pre><code class="html">
-&lt;h2 class="headline -wLine"&gt;
+<pre><code class="html">&lt;h2 class="headline -wLine"&gt;
 見出し
 &lt;/h2&gt;
 </code></pre>
-<span class="copy-btn" data-target=".headline.-wLine">サンプルコードをコピーする</span>
+<button class="copy-btn" data-target=".headline.-wLine">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
 
 <h2 class="headline -wLine_dot">
 タイトル（ドット線）
 </h2>
-<pre><code class="html">
-&lt;h2 class="headline -wLine_dot"&gt;
+<pre><code class="html">&lt;h2 class="headline -wLine_dot"&gt;
 タイトル（ドット線）
 &lt;/h2&gt;
 </code></pre>
-<span class="copy-btn" data-target=".headline.-wLine_dot">サンプルコードをコピーする</span>
+<button class="copy-btn" data-target=".headline.-wLine_dot">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
 
 
