--- a/root/CategoryName/sample/index.html
+++ b/root/CategoryName/sample/index.html
@@ -1,192 +1,41 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../_common/css/apa.css" media="all">
-  <link rel="stylesheet" href="../../_common/css/parts.css" media="all">
-  <link rel="stylesheet" href="../../_common/css/lba-slider.css" media="all">
-  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" media="all">
-  <title>サンプルページ</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="../../_common/css/apa.css" media="all">
+<link rel="stylesheet" href="../../_common/css/parts.css" media="all">
+<link rel="stylesheet" href="../../_common/css/lba-slider.css" media="all">
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" media="all">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<title>テンプレート</title>
 </head>
 <body class="st-grid -archives">
-  <div id="header"><!--ヘッダーマウント用--></div>
-  <main class="main">
-    <article class="content">
-      <section>
-      <!--▼▼▼▼▼▼▼▼▼▼▼▼ここから編集領域▼▼▼▼▼▼▼▼▼▼▼▼-->
-        <h1 class="page__title">
-        <span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
-        タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル
-        <span>サブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブサブ</span>
-        </h1>
-
-
-        <h2 class="headline -wLine">
-          見出し
-        </h2>
-
-        <h2 class="headline -wLine">
-          タイトル（基本）
-        </h2>
-        <h2 class="headline -wLine_dot">
-            タイトル（ドット線）
-        </h2>
-        <h2 class="headline -leftborder">
-            タイトル（横ボーダー）<br>2行目２行目２行目
-        </h2>
-
-        <h2 class="headline -wLine">
-          画像（クリック不可）
-        </h2>
-
-        <div class="mainImage"><img src="test01.jpg" alt=""></div>
-
-        <h2 class="headline -wLine">
-          画像（クリック可）
-        </h2>
-        <div class="mainImage"><a href="test01.jpg" target="_blank"><img src="test01.jpg" alt=""></a></div>
-        
-        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-
-
-        <h2 class="headline -wLine">
-          マウスオーバーで切り替え
-        </h2>
-    
-        <div class="rolloverImage">
-          <img src="rollover_bf.jpg" alt="">
-        </div>
-			
-				<style>
-				.colums__col3{
-					-webkit-column-count:3;
-          column-count:3;
-          margin-bottom: 20px
-								}
-				.colums__col3 div{
-				  column-width: 25em;
-				  margin: 0;
-          line-height: 1.8;
-        }
-        .colums__col2{
-					-webkit-column-count:2;
-          column-count:2;
-          margin-bottom: 20px
-								}
-				.colums__col2 p{
-				  column-width: 25em;
-				  margin: 0;
-          line-height: 1.8;
-        }
-        .stepnum{
-          position: relative;
-        }
-        .stepnum span{
-          position: absolute;
-          top:0;
-          left: 0;
-          padding: 10px;
-          line-height: 1;
-          background-color: #fff;
-          color: #333;
-        }
-        .colums__col3 .stepnum span{
-            padding: 5px;
-            line-height: 1;
-        } 
-        </style>
-        <div class="colums__col2">
-          <p>約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。</p>
-        </div>
-        <div class="colums__col3">
-          <div>
-            <h3>あああああああああああ</h3>
-            ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。
-            <div class="stepnum"><span>1</span><img src="test01.jpg" alt=""></div>
-            約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。ぼくの家から見える山が現在と同じような形になったのはおよそ5万年程前だといわれています。約30万年前に噴火が始まり、その後噴火が繰り返されたことによって、積もった火山灰や溶岩が次第に山を形成していき、標高1000メートルを越える山に成長していきました。
-            <img src="test02.jpg" alt="">
-          </div>
-        </div>
-		
-
-        <div class="flex_content" style="display:flex;">
-          <div class="image" style="flex: 1 1 50%;"><img src="test03.jpg" alt=""></div>
-          <p style="padding: 0 15px; flex: 1 1 50%; margin: 0;">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-        </div>
-        <div class="stepnum"><span>1</span><img src="test02.jpg" alt=""></div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          <table>
-            <th>aaa</th>
-            <td>iii</td>
-            <td>uuu</td>
-            <td>eeee</td>
-          </table>
+<header class="header">
+<iframe src="../../_menu/header.html" frameborder="no" scrolling="no" id="header"></iframe>
+</header>
+<main class="main">
+<article class="content">
+<section>
+<!--▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ここから編集領域▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼-->
 
 
 
 
-
-          <div class="syori">
-
-              <video controls width="100">
-                  <source src="movetest.mp4">
-              </video>
-              <dl>
-                  <dt>ああああああああああああああ</dt>
-                  <dd>いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい</dd>
-              </dl>
-          </div>
-      </section>
-      <!--▲▲▲▲▲▲▲▲▲▲▲▲▲ここから編集領域▲▲▲▲▲▲▲▲▲▲▲▲▲-->          
-    </article>
-  </main>
-
-      <aside class="side">
-        <ul>
-          <li><a href="">
-            <img src='test02.jpg'>
-            カフェで朝ごはん</a></li>
-          <li><a href="">
-            <img src='test02.jpg'>
-            カフェで朝ごはん</a></li>
-          <li><a href="">
-            <img src='test02.jpg'>
-            カフェで朝ごはん</a></li>
-          <li><a href="">
-            <img src='test02.jpg'>
-            カフェで朝ごはん</a></li>
-        </ul>
-        <div id="header">
-            <header-component :root="root"></header-component>
-          </div>
-      </aside>
-
-      <footer class="footer">
-        <div class="copyright">
-            <p>copyright</p>
-          </div>
-      </footer>
+<!--▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ここまで編集領域▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲-->
+</section>
+</article>
+</main>
+<aside class="side">
+<iframe src="../../_menu/sidebar.html" frameborder="no" scrolling="no" id="sidebar"></iframe>
+</aside>
+<footer class="footer">
+<iframe src="../../_menu/footer.html" frameborder="no" scrolling="no" id="footer"></iframe>
+</footer>
 <script src="../../_common/js/vue.min.js"></script>
 <script src="../../_common/js/jquery-3.3.1.min.js"></script>
 <script src="../../_common/js/ligbox.js"></script>
 <script src="../../_common/js/common.js"></script>
-
-<script>
-// 画像のロールオーバー
-$(function(){
-	$('.rolloverImage img').hover(function(){
-		$(this).attr('src',$(this).attr('src').replace('_bf','_af'));
-	},function(){
-		$(this).attr('src',$(this).attr('src').replace('_af','_bf'));
-	});
-});
-  
-
-</script>
-	
 </body>
-
 </html>
