--- a/root/index.html
+++ b/root/index.html
@@ -34,16 +34,9 @@
 <h1 class="top-siteName">APA TEMPLATE</h1>
 <div class="top-nav">
   <ul>
-    <li class="button"><a href="./CategoryName/sample/index.html">カテゴリ</a></li>
-    <li class="button"><a href="./CategoryName/sample/index.html">カテゴリ</a></li>
-    <li class="button"><a href="./page/category/sample/index.html">カテゴリ</a></li>
-    <li class="button"><a href="./page/category/sample/index.html">カテゴリ</a></li>
+    <li class="button"><a href="./CategoryName/sample/index.html">テンプレートページ</a></li>
+    <li class="button"><a href="./_codesample/codeSample/index.html">コードサンプル</a></li>
   </ul>
-	<ul>
-		<li><a href="">テスト</a></li>
-		<li><a href="">テスト</a></li>
-		<li><a href="">テスト</a></li>
-	</ul>
 </div>
 </main>
 	
