--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../_common/css/apa.css" media="all">
-  <link rel="stylesheet" href="../../_common/css/parts.css" media="all">
-  <link rel="stylesheet" href="../../_common/css/lba-slider.css" media="all">
-  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" media="all">
-  <link rel="stylesheet" href="../../_common/css/androidstudio.css">
-  <script src="../../_common/js/highlight.pack.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script>
-  hljs.initHighlightingOnLoad();
-  hljs.configure({tabReplace: '  '});
-  </script>
-  <style>
-  pre > code {
-    max-height: 200px;
-  }
-  .sampleDL-btn{
-    background-color:#00A3E8;
-    border-radius: 20px;
-    padding: 10px;
-    display: block;
-    width: 90%;
-    text-align: center;
-    color: #fff;
-    font-weight: 700;
-    cursor:pointer;
-    margin-bottom: 50px;
-  }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="../../_common/css/apa.css" media="all">
+<link rel="stylesheet" href="../../_common/css/parts.css" media="all">
+<link rel="stylesheet" href="../../_common/css/lba-slider.css" media="all">
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" media="all">
+<link rel="stylesheet" href="../../_common/css/androidstudio.css">
+<script src="../../_common/js/highlight.pack.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script>
+hljs.initHighlightingOnLoad();
+hljs.configure({tabReplace: '  '});
+</script>
+<style>
+pre > code {
+  max-height: 200px;
+}
+.sampleDL-btn{
+  background-color:#00A3E8;
+  border-radius: 20px;
+  padding: 10px;
+  display: block;
+  width: 90%;
+  text-align: center;
+  color: #fff;
+  font-weight: 700;
+  cursor:pointer;
+  margin-bottom: 50px;
+}
 
 
+.copy-btn{
+  background-color:gold;
+  border-radius: 20px;
+  padding: 10px;
+  display: block;
+  margin: 20px auto 50px;
+  width: 50%;
+  text-align: center;
+  color: #333;
+  font-weight: 700;
+  cursor:pointer;
+}
+@media (max-width: 767px) {
   .copy-btn{
-    background-color:gold;
-    border-radius: 20px;
-    padding: 10px;
-    display: block;
-    margin: 20px auto 50px;
-    width: 50%;
-    text-align: center;
-    color: #333;
-    font-weight: 700;
-    cursor:pointer;
+  padding: 10px;
+  display: block;
+  width: 90%;
+  color: #333;
+  font-weight: 700;
+  cursor:pointer;
   }
-  @media (max-width: 767px) {
-    .copy-btn{
-    padding: 10px;
-    display: block;
-    width: 90%;
-    color: #333;
-    font-weight: 700;
-    cursor:pointer;
-    }
-  }
-  .material-icons{
-    display: inline-flex;
-    vertical-align: bottom;
-  }
-  </style>
-  
+}
+.material-icons{
+  display: inline-flex;
+  vertical-align: bottom;
+}
+</style>
+
 
 <title>テンプレート</title>
 </head>
 <body class="st-grid -archives">
-  <header class="header">
-    <iframe src="../../_menu/header.html" frameborder="no" scrolling="no" id="header"></iframe>
-  </header>
-  <main class="main">
-    <article class="content">
-      <section>
-      <!--▼▼▼▼▼▼▼▼▼▼▼▼ここから編集領域▼▼▼▼▼▼▼▼▼▼▼▼-->
+<header class="header">
+<iframe src="../../_menu/header.html" frameborder="no" scrolling="no" id="header"></iframe>
+</header>
+<main class="main">
+<article class="content">
+<section>
+<!--▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ここから編集領域▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼-->
 
-<!--<a class="sampleDL-btn" href="../../categoryName/sample/index.html" download>右クリックでダウンロード</a>-->s
+
 <h1 class="page__title">
 <span>サブサブサブサブサブサブサブサブサブサブサブ</span>
 タイトルタイトルタイトルタイトル
@@ -168,7 +168,6 @@
 &lt;img src=&quot;●任意の画像ファイル名●_bf.jpg&quot;&gt;
 &lt;/div&gt;
 </code></pre>
-<!--※1つ目の画像は『画像ファイル名_bf.jpg』、2つ目の画像は『●画像ファイル名●_af.jpg』にしてください。-->
 <button class="copy-btn" data-target=".rolloverImage" data-name="マウスオーバーで切り替え">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
 
@@ -282,17 +281,20 @@
 </code></pre>
 <button class="copy-btn" data-target=".moveContent" data-name="ビデオ">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
-      </section>
 
-      <!--▲▲▲▲▲▲▲▲▲▲▲▲▲ここから編集領域▲▲▲▲▲▲▲▲▲▲▲▲▲-->          
-    </article>
-  </main>
-  <aside class="side">
-    <iframe src="../../_menu/sidebar.html" frameborder="no" scrolling="no" id="sidebar"></iframe>
-  </aside>
-  <footer class="footer">
-      <iframe src="../../_menu/footer.html" frameborder="no" scrolling="no" id="footer"></iframe>
-  </footer>
+
+<!--▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ここまで編集領域▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲-->     
+</section>
+</article>
+</main>
+<aside class="side">
+<iframe src="../../_menu/sidebar.html" frameborder="no" scrolling="no" id="sidebar"></iframe>
+</aside>
+<footer class="footer">
+<iframe src="../../_menu/footer.html" frameborder="no" scrolling="no" id="footer"></iframe>
+</footer>
+
+
 <script src="../../_common/js/vue.min.js"></script>
 <script src="../../_common/js/jquery-3.3.1.min.js"></script>
 <script src="../../_common/js/ligbox.js"></script>
