Update　ヘッドラインの追加

--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -57,7 +57,7 @@ pre > code {
 }
 .material-icons{
   display: inline-flex;
-  vertical-align: bottom;
+  vertical-align: top;
 }
 </style>
 
@@ -117,6 +117,8 @@ pre > code {
 </code></pre>
 <button class="copy-btn" data-target=".headline.-wLine_dot" data-name="タイトル（ドット線）">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
+
+
 <h2 class="headline -leftborder">
     タイトル（横ボーダー）<br>2行目２行目２行目
 </h2>
@@ -127,6 +129,15 @@ pre > code {
 <button class="copy-btn" data-target=".headline.-leftborder" data-name="タイトル（横ボーダー）2行">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
 
+<h3 class="headline -borderTitle">
+<span class="material-icons">play_circle_filled</span>ボーダータイトル
+</h3>
+<pre><code class="html">&lt;h3 class="headline -borderTitle"&gt;
+&lt;span class="material-icons"&gt;play_circle_filled&lt;/span&gt;ボーダータイトル
+&lt;/h3&gt;
+</code></pre>
+<button class="copy-btn" data-target=".headline.-borderTitle" data-name="ボーダータイトル">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
+
 <h2 class="headline -point_tab">
   ポイントタイトル
 </h2>
@@ -135,6 +146,38 @@ pre > code {
 &lt;/h2&gt;
 </code></pre>
 <button class="copy-btn" data-target=".headline.-point_tab" data-name="ポイントタイトル">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
+
+
+<h2 class="headline -wLine">
+注意ボックス
+</h2>
+<div class="cautionBox">
+<span class="box-title"><i class="material-icons">error</i>注意</span>
+<p>ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章</p>
+</div>
+<pre><code class="html">&lt;div class="cautionBox"&gt;
+&lt;span class="box-title"&gt;&lt;i class="material-icons"&gt;error&lt;/i&gt;注意&lt;/span&gt;
+&lt;p&gt;ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章&lt;/p&gt;
+&lt;/div&gt;
+</code></pre>
+<button class="copy-btn" data-target=".cautionBox" data-name="注意ボックス">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
+
+<h2 class="headline -wLine">
+ポイントボックス
+</h2>
+<div class="pointBox">
+<span class="box-title"><span class="material-icons">done_outline</span>ポイント</span>
+<p>ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章</p>
+</div>
+<pre><code class="html">&lt;div class="pointBox"&gt;
+&lt;span class="box-title"&gt;&lt;i class="material-icons"&gt;done_outline&lt;/i&gt;ポイント&lt;/span&gt;
+&lt;p&gt;ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章ここに文章&lt;/p&gt;
+&lt;/div&gt;
+</code></pre>
+<button class="copy-btn" data-target=".pointBox" data-name="ポイントボックス">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
+
+
+
 
 
 
