--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -310,6 +310,36 @@ pre > code {
 </code></pre>
 <button class="copy-btn" data-target=".content__col2.-reverse" data-name="画像 + テキスト(反転)">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
+
+<h2 class="headline -wLine">
+  Q&A
+</h2>
+<div class="qaContainer">
+<dl>
+<dt>質問文章</dt>
+<dd>回答文章</dd>
+<dt>質問文章</dt>
+<dd>回答文章</dd>
+<dt>質問文章</dt>
+<dd>回答文章</dd>
+</dl>
+</div>
+
+<pre><code class="html">&lt;div class=&quot;qaContainer&quot;&gt;
+&lt;dl&gt;
+&lt;dt&gt;質問文章&lt;/dt&gt;
+&lt;dd&gt;回答文章&lt;/dd&gt;
+&lt;dt&gt;質問文章&lt;/dt&gt;
+&lt;dd&gt;回答文章&lt;/dd&gt;
+&lt;dt&gt;質問文章&lt;/dt&gt;
+&lt;dd&gt;回答文章&lt;/dd&gt;
+&lt;/dl&gt;
+&lt;/div&gt;
+</code></pre>
+
+<button class="copy-btn" data-target=".qaContainer" data-name="Q&A">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
+
+
 <h2 class="headline -wLine">
 ビデオ
 </h2>
