Update　画像カラム

--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -213,6 +213,23 @@ pre > code {
 </code></pre>
 <button class="copy-btn" data-target=".rolloverImage" data-name="マウスオーバーで切り替え">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
+<h2 class="headline -wLine">
+  横並び画像
+</h2>
+<div class="colImage -col2">
+  <img src="test01.jpg" alt="">
+  <img src="test01.jpg" alt="">
+  <img src="test01.jpg" alt="">
+  <img src="test01.jpg" alt="">
+</div>
+<pre><code class="html">&lt;div class=&quot;colImage -col2&quot;&gt;
+&lt;img src=&quot;test01.jpg&quot; alt=&quot;&quot;&gt;
+&lt;img src=&quot;test01.jpg&quot; alt=&quot;&quot;&gt;
+&lt;/div&gt;
+</code></pre>
+<p>※【-col2】の箇所を【-col3】、【-col4】にも変えられます。</p>
+<button class="copy-btn" data-target=".colImage.-col2" data-name="横並び画像">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
+
 
 <h2 class="headline -wLine">
     画像(数字付き)
