Update　サンプルソース変更

--- a/root/_codesample/codeSample/index.html
+++ b/root/_codesample/codeSample/index.html
@@ -225,9 +225,11 @@ pre > code {
 <pre><code class="html">&lt;div class=&quot;colImage -col2&quot;&gt;
 &lt;img src=&quot;test01.jpg&quot; alt=&quot;&quot;&gt;
 &lt;img src=&quot;test01.jpg&quot; alt=&quot;&quot;&gt;
+&lt;img src=&quot;test01.jpg&quot; alt=&quot;&quot;&gt;
+&lt;img src=&quot;test01.jpg&quot; alt=&quot;&quot;&gt;
 &lt;/div&gt;
 </code></pre>
-<p>※【-col2】の箇所を【-col3】、【-col4】にも変えられます。</p>
+<p>【-col2】の箇所を【-col3】、【-col4】にも変えられます。</p>
 <button class="copy-btn" data-target=".colImage.-col2" data-name="横並び画像">サンプルコードをコピーする<span class="material-icons">cloud_download</span></button>
 
 
